# grasp

data/derived_data/: README.md
data/derived_data/testing/: activity_17546190369.csv
data/metadata/: README.md
data/raw_data/: README.md
data/raw_data/testing/: activity_17546190369.gpx  internet_connectivity.csv
docs/: Cost analysis.xlsx  data_privacy.pptx  grasp_report.docx
docs/PCB/: calc_conc.xlsx
src/: .gitignore  cert  http_req_test.py  i2c_scan.py  sd_test.py  sim7670e_httppost_thingsspeak.py
src/CAD/grasp_v0/: fp-info-cache  grasp_v0.kicad_pcb  grasp_v0.kicad_pro  grasp_v0.kicad_sch
src/NTC_SPICE/: NTC_Library.lib  NTC_Library.olb  NTC_import.asc  readme.txt
src/PCB/grasp_v0/: grasp_v0.kicad_pcb  grasp_v0.kicad_prl  ~grasp_v0.kicad_pcb.lck
src/SPICE/: Draft1.asc  LTC3129-1_design.asc  LTC3130_test_sensor.asc  analysis_buck_boost.ipynb  analysis_buck_boost.xlsx  board_15mA.asc  board_red_inv.asc  board_red_inv.net  board_red_inv.op.raw  board_red_inv.raw  buck_boost_test_nmos.asc  buck_boost_test_pmos.asc  buck_boost_test_pmos.csv
src/prog/micropython/deniz_thermocouple/Pico-SIM7080G-Cat-M-NB-IoT-Demo-Code/Pico/c/: CMakeLists.txt  main.c
src/prog/micropython/deniz_thermocouple/Pico-SIM7080G-Cat-M-NB-IoT-Demo-Code/Pico/c/examples/: CMakeLists.txt  Pico_SIM7080G_NB_loT.c
src/prog/micropython/deniz_thermocouple/Pico-SIM7080G-Cat-M-NB-IoT-Demo-Code/Pico/c/uf2/: Pico_SIM7080G_NB_loT_GPS.uf2  Pico_SIM7080G_NB_loT_HTTP.uf2  Pico_SIM7080G_NB_loT_MQTT.uf2
src/prog/micropython/rp2040/: cert  (+2 more)
src/sim7080g_testing/: gpx_to_csv_conv.py
(+11 files in other folders)
